[package]
name = "plugin_wasm"
version = "35.0.0"
authors = ["hkrn <129939+hkrn@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
nanoem-protobuf = { version = "35", path = "../protobuf" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3"
wasmer = { version = "4.0", default-features = false, features = [
    "sys",
    "cranelift",
] }
wasmer-wasix = { version = "0.4", default-features = false, features = [
    "sys",
    "sys-poll",
    "sys-thread",
] }
walkdir = "2"

[dev-dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
maplit = "1"
rand = "0.8"
pretty_assertions = "1"
assert_matches = "1"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
