[package]
name = "plugin_wasm"
version = "35.0.0"
authors = ["hkrn <129939+hkrn@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
nanoem-protobuf = { version = "35", path = "../protobuf" }
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
parking_lot = "0.12"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3"
wasmtime = { version = "18", default-features = false, features = [
    "cranelift",
] }
wasmtime-wasi = { version = "17" }
walkdir = "2"
zerocopy = "0.7"

[dev-dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
maplit = "1"
rand = "0.8"
pretty_assertions = "1"
assert_matches = "1"
async-trait = { version = "0.1" }
wasi-common = { version = "17" }
futures = { version = "0.3" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
