[package]
name = "plugin_wasm_test_model_minimum"
version = "35.0.0"
authors = ["hkrn <129939+hkrn@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
libc = "0.2"
