# ffmpeg
option(${PROJECT_NAME_PREFIX}_INSTALL_FFMPEG_PLUGIN OFF)
if(${PROJECT_NAME_PREFIX}_INSTALL_FFMPEG_PLUGIN)
  nanoem_cmake_get_install_path("ffmpeg" FFMPEG_BASE_PATH FFMPEG_INSTALL_PATH_DEBUG FFMPEG_INSTALL_PATH_RELEASE)
  find_library(AVCODEC_LIBRARY NAMES avcodec.58 avcodec PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_library(AVFORMAT_LIBRARY NAMES avformat.58 avformat PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_library(AVUTIL_LIBRARY NAMES avutil.56 avutil PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_library(SWRESAMPLE_LIBRARY NAMES swresample.3 swresample PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_library(SWSCALE_LIBRARY NAMES swscale.5 swscale PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_path(AVCODEC_INCLUDE_PATH NAMES libavcodec/avcodec.h PATH_SUFFIXES include PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_path(AVFORMAT_INCLUDE_PATH NAMES libavformat/avformat.h PATH_SUFFIXES include PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_path(AVUTIL_INCLUDE_PATH NAMES libavutil/avutil.h PATH_SUFFIXES include PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_path(SWRESAMPLE_INCLUDE_PATH NAMES libswresample/swresample.h PATH_SUFFIXES include PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  find_path(SWSCALE_INCLUDE_PATH NAMES libswscale/swscale.h PATH_SUFFIXES include PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
  mark_as_advanced(AVCODEC_LIBRARY AVFORMAT_LIBRARY AVUTIL_LIBRARY SWRESAMPLE_LIBRARY SWSCALE_LIBRARY AVCODEC_INCLUDE_PATH AVFORMAT_INCLUDE_PATH AVUTIL_INCLUDE_PATH SWRESAMPLE_INCLUDE_PATH SWSCALE_INCLUDE_PATH)
  if(AVCODEC_LIBRARY AND AVFORMAT_LIBRARY AND AVUTIL_LIBRARY AND AVCODEC_INCLUDE_PATH AND AVFORMAT_INCLUDE_PATH AND AVUTIL_INCLUDE_PATH)
    set(_plugin_name plugin_ffmpeg)
    add_library(${_plugin_name} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/ffmpeg.cc
                $<$<BOOL:${WIN32}>:${PROJECT_SOURCE_DIR}/emapp/include/emapp/sdk/win32/Decoder.def>
                $<$<BOOL:${WIN32}>:${PROJECT_SOURCE_DIR}/emapp/include/emapp/sdk/win32/Encoder.def>)
    nanoem_cmake_enable_lto(${_plugin_name})
    set_property(TARGET ${_plugin_name} PROPERTY FOLDER plugins)
    target_link_libraries(${_plugin_name} ${AVUTIL_LIBRARY} ${AVFORMAT_LIBRARY} ${AVCODEC_LIBRARY} ${SWRESAMPLE_LIBRARY} ${SWSCALE_LIBRARY} protobuf-c)
    set_target_properties(${_plugin_name} PROPERTIES OUTPUT_NAME ${_plugin_name} PREFIX "" DEFINE_SYMBOL "")
    set_property(TARGET ${_plugin_name} APPEND PROPERTY COMPILE_DEFINITIONS __STDC_LIMIT_MACROS __STDC_CONSTANT_MACROS __STDC_FORMAT_MACROS)
    set_property(TARGET ${_plugin_name} APPEND PROPERTY INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/emapp/include ${AVCODEC_INCLUDE_PATH} ${AVFORMAT_INCLUDE_PATH} ${AVUTIL_INCLUDE_PATH} ${SWRESAMPLE_INCLUDE_PATH} ${SWSCALE_INCLUDE_PATH} ${PROJECT_SOURCE_DIR}/dependencies/protobuf-c)
    nanoem_emapp_plugin_install(${_plugin_name})
    if(WIN32)
      find_file(AVCODEC_LIBRARY_DLL NAME avcodec-58.dll PATH_SUFFIXES bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
      find_file(AVFORMAT_LIBRARY_DLL NAMES avformat-58.dll PATH_SUFFIXES bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
      find_file(AVUTIL_LIBRARY_DLL NAMES avutil-56.dll PATH_SUFFIXES bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
      find_file(SWRESAMPLE_LIBRARY_DLL NAMES swresample-3.dll PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
      find_file(SWSCALE_LIBRARY_DLL NAMES swscale-5.dll PATH_SUFFIXES lib bin PATHS ${FFMPEG_INSTALL_PATH_RELEASE} NO_DEFAULT_PATH)
      mark_as_advanced(AVCODEC_LIBRARY_DLL AVFORMAT_LIBRARY_DLL AVUTIL_LIBRARY_DLL SWRESAMPLE_LIBRARY_DLL SWSCALE_LIBRARY_DLL)
      if(CMAKE_SIZEOF_VOID_P EQUAL 4)
        set_property(TARGET ${_plugin_name} APPEND PROPERTY LINK_FLAGS "/SAFESEH:NO")
      endif()
    endif()
  endif()
endif()
